Add documentation and optimise code