@@ -6,7 +6,6 @@ import com.sport.personaltrainerqueryservice.querymodel.WorkoutSessionView;
 import java.sql.Date;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.axonframework.messaging.responsetypes.ResponseTypes;
 import org.axonframework.queryhandling.QueryGateway;
@@ -16,6 +15,7 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class WorkoutSessionQueryService {
 
+  // QueryGateway allow as to execute query on different nodes in the cluster and get one result
   private final QueryGateway queryGateway;
 
   public CompletableFuture<List<WorkoutSessionViewDTO>> findApprenticeWorkoutViewByApprenticeIdAndWorkoutDateBetween(
@@ -25,6 +25,6 @@ public class WorkoutSessionQueryService {
                 apprenticeId, start, end), ResponseTypes.multipleInstancesOf(WorkoutSessionView.class))
         .thenApply(r -> r.stream()
             .map(WorkoutSessionViewDTO::new)
-            .collect(Collectors.toList()));
+            .toList());
   }
 }
